# jupyterhub-deploy-docker

./: Dockerfile  Dockerfile.hub  Dockerfile.notebook  README.md  compose.yml  jupyterhub_config.py
basic-example/: Dockerfile.notebook  docker-compose.yml  jupyterhub_config.py
basic-example/envs/: curvenote-build.sh  curvenote-launch.sh  jupyter_server_config_additional.py  overrides.json  setup.sh
basic-example/envs/nucleus-env/: pyproject.toml
basic-example/home-overlay/: .zshrc
basic-example/templates/: platereader-kinetics.ipynb
basic-example/work-preload/.templates/platereader/: platereader.ipynb
basic-example/work-preload/templates/platereader/: platereader.ipynb
