[project]
name = "nucleus-env"
version = "0.1.0a1"
description = "Metapackage to set up a default environment for working with the Nucleus CDK and synthetic cells."
readme = "README.md"
requires-python = ">=3.12"
authors = [ 
  {name="Anton Jackson-Smith", email="anton@bnext.bio"},
]
maintainers = [
  {name="Anton Jackson-Smith", email="anton@bnext.bio"},
]
homepage = "https://nucleus.bnext.bio/"
repository = "https://github.com/bnext-bio/nucleus/"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
  "synthetic biology",
  "synthetic cell",
  "syncell",
  "cellfree",
  "nucleus",
  "cell developer kit"
]
dependencies = [
    "tqdm>=4.67.1",
    "napari[all]>=0.5.6",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "anywidget>=0.9.18",
    "jupyter-collaboration>=1.1.0",
    "ipympl>=0.9.7",
    "jupyterlab-templates>=0.5.2",
    "nucleus-cdk>=0.3.0a1",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
